--- a/trustarc/trustarc.info.yml
+++ b/trustarc/trustarc.info.yml
@@ -1,8 +1,7 @@
 name: TrustArc Cookie Consent Manager
 description: A plugin to configure and inject TrustArc CMP script along with banner and Cookie Preferences link.
-package: TrustArc Cookie Consent Manager
-core_version_requirement: ^9 || ^10
 type: module
-configure: trustarc.admin.header
+package: Custom
+core_version_requirement: ^8.8 || ^9 || ^10
 templates:
   - trustarc-preferences
