--- a/trustarc/trustarc.libraries.yml
+++ b/trustarc/trustarc.libraries.yml
@@ -3,6 +3,7 @@ trustarc_js:
   js:
     js/trustarc.js: {}
   dependencies:
+    - core/jquery
     - core/drupal
     - core/drupalSettings
     - core/once
