--- a/trustarc/trustarc.permissions.yml
+++ b/trustarc/trustarc.permissions.yml
@@ -1,4 +1,4 @@
 trustarc_settings:
   title: 'TrustArc'
-  description: 'Simplify Cookie Consent Integration with TrustArc'
+  description: 'Provides integration with TrustArc for cookie consent management.'
   restrict access: TRUE
